src/test/ui/parser/issue-17383.stderr
error: discriminator values can only be used with a field-less enum
  --> $DIR/issue-17383.rs:2:9
   |
LL |     A = 3,
   |         ^ only valid in field-less enums

error: aborting due to previous error

