src/test/ui/parser/issue-17383.rs
enum X {
    A = 3,
    //~^ ERROR discriminator values can only be used with a field-less enum
    B(usize)
}

fn main() {}
